--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
       accusantium cumque suscipit ut molestiae, temporibus tempore quidem a
       aperiam!
     </p>
+    <ul>
+      <li>Home</li>
+      <li>About us</li>
+      <li>Contact us</li>
+    </ul>
   </body>
 </html>
